--- a/ApiGateway/.settings/org.eclipse.wst.common.component
+++ b/ApiGateway/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="CommonWebService.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/CommonWebService/CommonWebService">
+        <dependent-module archiveName="CommonWS.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/CommonWS/CommonWS">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/ApiGateway/target/classes"/>
